Página - Cobrança [Vence em breve]

--- a/area-do-cliente-usuario-id-001432-fatura-online/index.html
+++ b/area-do-cliente-usuario-id-001432-fatura-online/index.html
@@ -5,9 +5,9 @@
 <!----PreviewCard---->
 <meta property="og:type" content="website">
 <meta property="og:title" content="Renovação - Pagamento seguro 🔒">
-<meta property="og:description" content="XCofe © Todos os direitos reservados">
-<meta property="og:url" content="https://gabriielrobert.github.io/xcofe">
-<meta property="og:image" content="https://gabriielrobert.github.io/xcofe/PreviewCard2.png">
+<meta property="og:description" content="TV R-Plus © Todos os direitos reservados">
+<meta property="og:url" content="https://tvrplus.site/area-do-cliente-usuario-id-001432-fatura-online">
+<meta property="og:image" content="https://tvrplus.site/PreviewCard1.png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 <!----PreviewCard---->
@@ -150,10 +150,25 @@
       gap: 6px;
     }
     
-    .brand-x {
-      color: #ff1a1a;
-      font-weight: 700;
-    }
+    .brand-name {
+  color: #ffffff; /* garante branco como padrão */
+}
+
+.brand-t {
+  color: #ff1a1a; /* vermelho */
+  font-weight: 700;
+}
+
+.brand-v {
+  color: #9e9e9e; /* cinza */
+  font-weight: 700;
+}
+
+.brand-rplus {
+  color: #ffffff; /* branco FORÇADO */
+  font-weight: 600;
+}
+
     
     .brand-channels {
       color: #cfcfcf;
@@ -613,8 +628,13 @@
    <div class="main-container"><!-- Header -->
     <header class="header">
      <div class="header-left">
-      <div class="brand-title"><span><span class="brand-x">X</span>Cofe</span> <span class="brand-channels">• Canais ilimitados</span>
-      </div>
+      <div class="brand-title">
+  <span class="brand-name">
+    <span class="brand-t">T</span><span class="brand-v">V</span>
+    <span class="brand-rplus"> R-Plus</span>
+  </span>
+  <span class="brand-channels">• Canais ilimitados</span>
+</div>
       <div class="header-subtitle">
        ÁREA DO CLIENTE | Fatura mensal
       </div>
