--- a/editor-dns/index.html
+++ b/editor-dns/index.html
@@ -78,7 +78,7 @@
         .card-dns {
             width: 100%;
             max-width: 450px;
-            border: 1px solid #444;
+            border: 1px solid #fff;
             border-radius: 15px;
             padding: 25px;
             margin-bottom: 30px;
