--- a/editor-dns/index.html
+++ b/editor-dns/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+
+<!----Favicon---->
+<link rel="icon" type="image/png" sizes="32x32" href="Favicon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="Favicon.png">
+<!----Favicon---->
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editor de DNS</title>
