--- a/editor-dns/index.html
+++ b/editor-dns/index.html
@@ -3,8 +3,8 @@
 <head>
 
 <!----Favicon---->
-<link rel="icon" type="image/png" sizes="32x32" href="Favicon.png">
-<link rel="apple-touch-icon" sizes="180x180" href="Favicon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="Favicon-editor.png">
+<link rel="apple-touch-icon" sizes="180x180" href="Favicon-editor.png">
 <!----Favicon---->
     
     <meta charset="UTF-8">
