--- a/area-do-cliente-usuario-id-001433-fatura-online/index.html
+++ b/area-do-cliente-usuario-id-001433-fatura-online/index.html
@@ -641,7 +641,7 @@
       </div>
      </div>
      <div class="header-right">
-      <div class="status-badge"><span class="status-dot"></span> <span>Invativo</span>
+      <div class="status-badge"><span class="status-dot"></span> <span>Inativo</span>
       </div>
       <div class="user-avatar">
        <svg viewbox="0 0 24 24">
