Página - Cobrança [Vencido]

--- a/area-do-cliente-usuario-id-001433-fatura-online/index.html
+++ b/area-do-cliente-usuario-id-001433-fatura-online/index.html
@@ -2,6 +2,11 @@
 <html lang="pt-BR" class="h-full">
  <head>
 
+<!----Favicon---->
+<link rel="icon" type="image/png" sizes="32x32" href="Favicon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="Favicon.png">
+<!----Favicon---->
+
 <!----PreviewCard---->
 <meta property="og:type" content="website">
 <meta property="og:title" content="Renovação - Pagamento seguro 🔒">
